<resources>
    <string name="app_name">3-Dots</string>
    <string name="play_button_string">Play</string>
    <string name="title_activity_game">Playing Game</string>
    <string name="game_title">3-Dots</string>
    <string name="invalid_button">You can\'t move there.</string>
    <string name="game_won">Congrats! You won!</string>
    <string name="game_lost">Game over.</string>
    <string name="undo_button">Undo</string>
    <string name="cant_undo">Can\'t undo.</string>
    <string name="start_over_button">Restart</string>
    <string name="win_condition_button">How to win</string>
    <string name="magic_number">Magic number:</string>
    <string name="random">Random</string>
    <string name="bad_random_seed">You must type a number in the box, or you can press random.</string>
    <string name="how_to_play">How To Play</string>
    <string name="title_activity_help_page">HelpPage</string>
    <string name="type_label_1">1: </string>
    <string name="type_label_2">2: </string>
    <string name="type_label_3">3: </string>
    <string name="type_label_4">4: </string>
    <string name="right_now">Now: </string>
    <string name="to_win">To Win: </string>
</resources>
