<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GameActivity"
    tools:showIn="@layout/activity_game">

    <TextView
        style="@style/GameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:id="@+id/game_text_placeholder"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_text_placeholder"
        android:layout_centerHorizontal="true"
        android:id="@+id/undo_row">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/undo_button"
            android:text="@string/undo_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_condition_button"
            android:text="@string/win_condition_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_over_button"
            android:text="@string/start_over_button"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/game_interface"
        android:layout_below="@+id/undo_row" />




<!-- Redesigning this element.
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_type_count"
        android:layout_below="@+id/undo_row"
        android:layout_centerHorizontal="true">

        <TextView
            style="@style/TypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_label_1"
            android:text="@string/type_label_1"
            />
        <TextView
            style="@style/TypeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_count_1" />

        <TextView
            style="@style/TypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_label_2"
            android:text="@string/type_label_2"/>
        <TextView
            style="@style/TypeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_count_2"/>

        <TextView
            style="@style/TypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_label_3"
            android:text="@string/type_label_3"/>
        <TextView
            style="@style/TypeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_count_3"/>

        <TextView
            style="@style/TypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_label_4"
            android:text="@string/type_label_4"/>
        <TextView
            style="@style/TypeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_count_4"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/undo_row"
        android:layout_toLeftOf="@id/current_type_count"
        android:text="@string/right_now"/>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/win_count"
        android:layout_below="@+id/current_type_count"
        android:layout_centerHorizontal="true">

        <TextView
            style="@style/TypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_label_1"
            android:text="@string/type_label_1"
            />
        <TextView
            style="@style/TypeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_count_1" />

        <TextView
            style="@style/TypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_label_2"
            android:text="@string/type_label_2"/>
        <TextView
            style="@style/TypeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_count_2"/>

        <TextView
            style="@style/TypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_label_3"
            android:text="@string/type_label_3"/>
        <TextView
            style="@style/TypeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_count_3"/>

        <TextView
            style="@style/TypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_label_4"
            android:text="@string/type_label_4"/>
        <TextView
            style="@style/TypeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/win_count_4"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/win_count"
        android:layout_below="@+id/current_type_count"
        android:text="@string/to_win"/>


        -->


</RelativeLayout>
